# liquidation-research

./: .gitignore  .solhint.json  README.md  foundry.toml  package.json
docai/bakalaurinis/pagrindinis/: bakalaurinis.tex  bibliografija.bib  titulinis.tex
docai/bakalaurinis/planas/: Makefile  bibliografija.bib  planas.tex
docai/kursinis/: VUMIFPSkursinis.cls  bibliografija.bib  kursinis.tex  santrauka.txt
docai/kursinis/gynimas/: skaidres.tex
docai/praktika/: Makefile  VUMIFTemplateClass.cls  praktika.tex  titulinis.tex
docai/praktika/gynimas/: .gitignore  Makefile  skaidres.tex
gas_price_filler/: Cargo.toml
gas_price_filler/src/: db_client.rs  main.rs
liquidations_aggregator/: Cargo.toml
liquidations_aggregator/src/: big_num.rs  db_client.rs  lib.rs  log_parsing.rs  main.rs  memory.rs
script/: Base.s.sol  Deploy.s.sol
scripts/: liq_any.sh  liq_cant_repeat.sh  liq_first_ever.sh  liq_incentive_15.sh  liq_investigate.sh  liq_log_parse_test.sh  liq_not_enough_collateral.sh  liq_not_enough_collateral_in_drain.sh  liq_repay_bnb.sh  liq_repay_xvs.sh  liq_super_in_dept.sh  liq_zero_seize.sh
src/Comptroller/: ComptrollerInterface.sol  ComptrollerStorage.sol
src/InterestRateModels/: InterestRateModel.sol
src/Liquidator/: Liquidator.sol
src/Oracle/: PriceOracle.sol
src/Tokens/: EIP20Interface.sol
src/Tokens/VAI/: VAIControllerInterface.sol
src/Tokens/VTokens/: VTokenInterfaces.sol
src/Utils/: ErrorReporter.sol  ExponentialNoError.sol
test/: Foo.t.sol  OneTime.t.sol
