[package]
name = "gas_price_filler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.12"
regex = "1.11.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.31"
deadpool-postgres = "0.14.0"
dotenv = "0.15"
